<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@drawable/ic_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alice"/>

    <ImageView
        android:id="@+id/iv_res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:src="@drawable/ic_trophy"
        android:layout_margin="40dp"
        android:contentDescription="@string/trophy"/>
    <TextView
        android:id="@+id/tv_greet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/hey_congratulations"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_margin="5dp"
        />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_margin="5dp"
        />
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Your score is 0 out of 10"/>
    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/finish"
        android:background="@color/white"
        />


</LinearLayout>